# jamie

./: README.md  pyproject.toml
jamie/: downloader.py  filer.py  logger.py  main.py  model.py  scorer.py  splitter.py  transcribe.py
